--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: WatIsYourPasswd
+title: x0_Neo
 description: Just a basic webpage to showcase some of my projects and accomplishments.
 google_analytics:
 theme: jekyll-theme-hacker
