--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Forearms
+title: 0xForearms
 description: Just a basic webpage to showcase some of my projects and accomplishments.
 google_analytics:
 theme: jekyll-theme-hacker
